Deployments/unode-deployments/unode-onboard/unode-onboard-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unode-onboard-api-ingress 
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: unode-backend.techmentor.solutions
    http:
      paths:
      - backend:
          service:
            name: unode-onboard-api-service  
            port:
              number: 8000
        path: /onboard
        pathType: Prefix
